samples/_failures_safe/1761169938_6d846c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20d3d73c.c: In function ‘main’:
./samples/SAFE/__tmp_20d3d73c.c:152:5: error: expected expression at end of input
  152 |     add_matrices(&mat1, &
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_20d3d73c.c:152:5: error: too few arguments to function ‘add_matrices’
./samples/SAFE/__tmp_20d3d73c.c:68:6: note: declared here
   68 | void add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_20d3d73c.c:152:5: error: expected declaration or statement at end of input
  152 |     add_matrices(&mat1, &
      |     ^~~~~~~~~~~~
